--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
             </div>
          </nav>
          <div class="banner_main">
-            <h1 class="banner_taital">Build Best</h1>
-            <h1 class="banner_taital_1">Software</h1>
-            <p class="banner_text">There are many variations of passages of Lorem Ipsum available, but the majority </p>
+            <h1 class="banner_taital">Software Development Consulting for</h1>
+            <h1 class="banner_taital_1">Businesses & Innovators</h1>
+            <p class="banner_text">Alharbi Software offers software development consulting services for businesses, startups, and enterprises. Partner with a reliable software development company to scale up your engineering capacity.</p>
             <div class="btn_main">
                <div class="more_bt"><a href="#">Contact Us</a></div>
                <div class="contact_bt"><a href="#">Get a quote</a></div>
@@ -77,15 +77,12 @@
                <ul>
                   <li class="active"><a href="index.html">Home</a></li>
                   <li><a href="about.html">About</a></li>
-                  <li><a href="software.html">Our Software</a></li>
                   <li><a href="services.html">Services</a></li>
                   <li><a href="contact.html">Contact Us</a></li>
                </ul>
             </div>
             <div class="menu_main_1">
                <ul>
-                  <li><a href="#">login</a></li>
-                  <li><a href="#">Register</a></li>
                   <li><a href="#"><img src="images/search-icon.png"></a></li>
                </ul>
             </div>
@@ -97,8 +94,8 @@
          <div class="container">
             <div class="row">
                <div class="col-md-6">
-                  <h1 class="about_taital">About Softwares</h1>
-                  <p class="about_text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden</p>
+                  <h1 class="about_taital">About Us</h1>
+                  <p class="about_text">Accelerate Your Business Growth With Us! <br \> Your business is only as good as the technology behind it. We have the expertise. You have the vision. We make technology happen! Our team of world-class engineers and innovators will build your next software project, leaving you to focus on running your business. <br \> Got an idea? Bring it to life with Alharbi Software</p>
                   <div class="read_bt"><a href="#">Read More</a></div>
                </div>
                <div class="col-md-6">
@@ -114,103 +111,11 @@
             <div class="row">
                <div class="col-md-6">
                   <h1 class="services_taital">What We Do </h1>
+                  <p class="">We are a software development and consulting company that has been making success stories since 2019. Our custom software development services deliver exceptional user experiences to set you apart from the competition. So, book a free consultation to explore our value-added services and achieve realistic corporate goals. </p>
                   <div class="image_2"><img src="images/img-2.png"></div>
-               </div>
-               <div class="col-md-6">
-                  <div class="box_main">
-                     <h1 class="technology_text">New Technology</h1>
-                     <p class="dummy_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour</p>
-                     <p class="dummy_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour</p>
-                  </div>
-                  <div class="readmore_bt"><a href="#">Read More</a></div>
-               </div>
-            </div>
-            <div class="row">
-               <div class="col-md-6">
-                  <div class="image_2"><img src="images/img-3.png"></div>
-               </div>
-               <div class="col-md-6">
-                  <div class="box_main">
-                     <h1 class="technology_text">Long Live UX</h1>
-                     <p class="dummy_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour</p>
-                  </div>
-                  <div class="readmore_bt"><a href="#">Read More</a></div>
-               </div>
-            </div>
-            <div class="row">
-               <div class="col-md-6">
-                  <div class="image_2"><img src="images/img-4.png"></div>
-               </div>
-               <div class="col-md-6">
-                  <div class="box_main">
-                     <h1 class="technology_text">Web Trends</h1>
-                     <p class="dummy_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour</p>
-                  </div>
-                  <div class="readmore_bt"><a href="#">Read More</a></div>
-               </div>
-            </div>
-            <div class="row">
-               <div class="col-md-6">
-                  <div class="image_2"><img src="images/img-5.png"></div>
-               </div>
-               <div class="col-md-6">
-                  <div class="box_main">
-                     <h1 class="technology_text">User Interfaces</h1>
-                     <p class="dummy_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour</p>
-                  </div>
-                  <div class="readmore_bt"><a href="#">Read More</a></div>
-               </div>
-            </div>
-         </div>
+               </div></div></div>
       </div>
       <!--services section end -->
-      <!--software section start -->
-      <div class="software_section layout_padding">
-         <div class="container">
-            <h1 class="software_taital">Our Software</h1>
-            <p class="software_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour</p>
-            <div class="software_section_2 layout_padding">
-               <div class="owl-carousel">
-                  <div>
-                     <img src="images/img-6.png" class="image_6">
-                     <h4 class="ipsum_text">Ipsum available,</h4>
-                  </div>
-                  <div>
-                     <img src="images/img-7.png" class="image_6">
-                     <h4 class="ipsum_text">Ipsum available,</h4>
-                  </div>
-                  <div>
-                     <img src="images/img-8.png" class="image_6">
-                     <h4 class="ipsum_text">Ipsum available,</h4>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </div>
-      <!--software section end -->
-      <!--works section start -->
-      <div class="works_section layout_padding">
-         <div class="container">
-            <h1 class="work_taital">How It Works</h1>
-            <div class="works_section_2 layout_padding">
-               <div class="row">
-                  <div class="col-sm-4">
-                     <h3 class="fully_text">FULLY RESPONSIVE</h3>
-                     <p class="lorem_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
-                  </div>
-                  <div class="col-sm-4">
-                     <h3 class="fully_text">WELL DOCUMENTED</h3>
-                     <p class="lorem_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
-                  </div>
-                  <div class="col-sm-4">
-                     <h3 class="fully_text">EASY TO USE</h3>
-                     <p class="lorem_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </div>
-      <!--works section end -->
       <!--contact section start -->
       <div class="contact_section layout_padding">
          <div class="container">
@@ -250,13 +155,13 @@
             <div class="row">
                <div class="col-lg-5 col-sm-6">
                   <div class="footer_logo"><img src="images/footer-logo.png"></div>
-                  <p class="dolor_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or </p>
+                  <p class="dolor_text">Alharbi Software offers software development consulting services for businesses, startups, and enterprises. Partner with a reliable software development company to scale up your engineering capacity.</p>
                </div>
                <div class="col-lg-3 col-sm-6">
                   <h4 class="address_text">Adderes</h4>
-                  <p class="dolor_text">passages of Lorem Ipsum available, but the majority have</p>
-                  <p class="dolor_text">(+71) 9876543210</p>
-                  <p class="dolor_text">demo@gmail.com</p>
+                  <p class="dolor_text">Riyadh, Saudi Arabia</p>
+                  <p class="dolor_text">(+966) 505973335</p>
+                  <p class="dolor_text">demo@alharbisoftware.com</p>
                </div>
                <div class="col-lg-4 col-sm-12">
                   <h4 class="address_text">Newsletter</h4>
