--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
             <div class="menu_main">
                <ul>
                   <li class="active"><a href="index.html">Home</a></li>
-                  <li><a href="about.html">About</a></li>
+                  <!-- <li><a href="about.html">About</a></li>
                   <li><a href="services.html">Services</a></li>
-                  <li><a href="contact.html">Contact Us</a></li>
+                  <li><a href="contact.html">Contact Us</a></li> -->
                </ul>
             </div>
             <div class="menu_main_1">
