--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
       </div>
       <!--header section end -->
       <!--costume header section start -->
-      <div class="costume_header">
+    <!--   <div class="costume_header">
          <div class="container">
             <div class="menu_main">
                <ul>
-                  <li class="active"><a href="index.html">Home</a></li>
-                  <!-- <li><a href="about.html">About</a></li>
+                 <li class="active"><a href="index.html">Home</a></li>
+                   <li><a href="about.html">About</a></li>
                   <li><a href="services.html">Services</a></li>
-                  <li><a href="contact.html">Contact Us</a></li> -->
+                  <li><a href="contact.html">Contact Us</a></li> 
                </ul>
             </div>
             <div class="menu_main_1">
@@ -89,7 +89,7 @@
          </div>
       </div>
       <!--costume header section end -->
-      <!-- about section start -->
+      <!-- about section start --> -->
       <div class="about_section layout_padding">
          <div class="container">
             <div class="row">
