--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
             <h1 class="banner_taital">Software Development Consulting for</h1>
             <h1 class="banner_taital_1">Businesses & Innovators</h1>
             <p class="banner_text">Alharbi Software offers software development consulting services for businesses, startups, and enterprises. Partner with a reliable software development company to scale up your engineering capacity.</p>
-            <div class="btn_main">
+          <!--  <div class="btn_main">
                <div class="more_bt"><a href="#">Contact Us</a></div>
                <div class="contact_bt"><a href="#">Get a quote</a></div>
-            </div>
+            </div> -->
          </div>
       </div>
       <!--header section end -->
