--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
    </head>
    <body>
       <!--header section start -->
-      <div class="header_section">
+      <!-- <div class="header_section">
          <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="logo"><a href="index.html"><img src="images/logo.png"></a></div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -68,7 +68,7 @@
                <div class="contact_bt"><a href="#">Get a quote</a></div>
             </div> -->
          </div>
-      </div>
+      </div> -->
       <!--header section end -->
       <!--costume header section start -->
     <!--   <div class="costume_header">
