--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
    </head>
    <body>
       <!--header section start -->
-      <!-- <div class="header_section">
+       <div class="header_section">
          <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="logo"><a href="index.html"><img src="images/logo.png"></a></div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <!--  <div class="collapse navbar-collapse" id="navbarSupportedContent">
                <ul class="navbar-nav mr-auto">
                   <li class="nav-item">
                      <a class="nav-link" href="index.html">Home</a>
@@ -57,7 +57,7 @@
                      <a class="nav-link" href="contact.html">Contact Us</a>
                   </li>
                </ul>
-            </div>
+            </div> -->
          </nav>
          <div class="banner_main">
             <h1 class="banner_taital">Software Development Consulting for</h1>
@@ -68,7 +68,7 @@
                <div class="contact_bt"><a href="#">Get a quote</a></div>
             </div> -->
          </div>
-      </div> -->
+      </div> 
       <!--header section end -->
       <!--costume header section start -->
     <!--   <div class="costume_header">
