--- a/index.html
+++ b/index.html
@@ -158,9 +158,8 @@
                   <p class="dolor_text">Alharbi Software offers software development consulting services for businesses, startups, and enterprises. Partner with a reliable software development company to scale up your engineering capacity.</p>
                </div>
                <div class="col-lg-3 col-sm-6">
-                  <h4 class="address_text">Adderes</h4>
+                  <h4 class="address_text">Address</h4>
                   <p class="dolor_text">Riyadh, Saudi Arabia</p>
-                  <p class="dolor_text">(+966) 506599985</p>
                   <p class="dolor_text">demo@alharbisoftware.com</p>
                </div>
                <div class="col-lg-4 col-sm-12">
